{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 13,
  "lineage": "5c664d94-c54a-1ab5-d98a-bddd953defbb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_calico_vxlan",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8472"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:09.047-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-calico-vxlan",
            "log_config": [],
            "name": "allow-calico-vxlan",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-calico-vxlan",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_control_plane_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10257",
                  "10259"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:08.535-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-control-plane-internal",
            "log_config": [],
            "name": "allow-control-plane-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-control-plane-internal",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-control-plane"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_k8s_apiserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:08.892-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-k8s-apiserver",
            "log_config": [],
            "name": "allow-k8s-apiserver",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-k8s-apiserver",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-control-plane"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10250"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:08.876-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-kubelet",
            "log_config": [],
            "name": "allow-kubelet",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-kubelet",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-control-plane",
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:08.943-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-nodeport",
            "log_config": [],
            "name": "allow-nodeport",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-nodeport",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "k8s-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-04T00:06:08.984-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/my-project-test-485708/global/firewalls/allow-ssh-http",
            "log_config": [],
            "name": "allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "params": [],
            "priority": 1000,
            "project": "my-project-test-485708",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/firewalls/allow-ssh-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "lab-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "main",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260128",
                    "labels": {
                      "env": "dev",
                      "goog-terraform-provisioned": "true"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/zones/asia-southeast1-b/disks/main-boot-disk"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-02-04T00:06:43.326-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "env": "dev",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/my-project-test-485708/zones/asia-southeast1-b/instances/main",
            "instance_id": "6760733479978090749",
            "label_fingerprint": "GRxbiIDtNlU=",
            "labels": {
              "env": "dev"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCX7G315dZXJp2klzf2r8HjV6Mk/26t3cSK4pwsdpCZmgUxHa8jrLUIEvyPaQwYrrwYzgUk4uYlBT+3Qi2yBzdE2oDb7w5nf4x5cBq0sDIghtyNEumzvPsbjaqdGhU23WcZYVIpZpAcObzuBYFxWSSszVmMyh0b9J4lyAIxsbIXr9Itj+daIUGeP3V608c8ufln464qVGtuxn/PHGRjqADYSfbW9z+7V1rcLHXNal5Z8WcXZGatliyRUR2uPr+tBxmdplVvBRwNKLsQonaTCBx8m1vZ2+xmSILhvrgoTKYOg/6HMV6QzCG+dbS1g/kRilgtDqRSy457PnFZNISAnhZmru/qHO+bobnbMQ9WYBKyLLTSJz1YRZgZFnTNcc383CGBWZRLEwIAA/1E38xDO6u2Zqn6mvmh9KsFi4gwr/1Gwz [...]
            },
            "metadata_fingerprint": "YjcU_Xo8HCI=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\napt-get update -y\r\napt-get install -y nginx\r\nsystemctl enable --now nginx\r\n",
            "name": "main",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.187.81",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/regions/asia-southeast1/subnetworks/qlts-subnet",
                "subnetwork_project": "my-project-test-485708"
              }
            ],
            "project": "my-project-test-485708",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/zones/asia-southeast1-b/instances/main",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "lab-node"
            ],
            "tags_fingerprint": "JsYPtl9qJU0=",
            "terraform_labels": {
              "env": "dev",
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_disk.boot",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/my-project-test-485708/global/networks/qlts-vpc",
            "mtu": 0,
            "name": "qlts-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5007674747697185589",
            "numeric_id": "5007674747697185589",
            "project": "my-project-test-485708",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-04T00:06:09.661-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/my-project-test-485708/regions/asia-southeast1/subnetworks/qlts-subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "qlts-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/global/networks/qlts-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "my-project-test-485708",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-project-test-485708/regions/asia-southeast1/subnetworks/qlts-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1221639394
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}